--- a/src/ProgramDevice.css
+++ b/src/ProgramDevice.css
@@ -1,26 +1,26 @@
-.program-fpga {
+.program-device {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-.program-fpga-component {
+.program-device-component {
     margin-top: 120px;
     margin-bottom: 130px;
 }
 
-.program-fpga-file {
+.program-device-file {
     display: block;
     margin: auto;
 }
 
-.program-fpga-success {
+.program-device-success {
     color: green;
 }
 
-.program-fpga-failure {
+.program-device-failure {
     color: red;
 }
 
-.program-fpga-progress {
+.program-device-progress {
     color: black;
 }
 
